Make readmesync call hugo.
Call hugo after syncing our readmes.

--- a/readmesync/Dockerfile
+++ b/readmesync/Dockerfile
@@ -1,10 +1,15 @@
 FROM busybox
 
 ADD readmesync /bin/readmesync
+ADD hugo /bin/hugo
 
-VOLUME /output
+VOLUME /hugoSource
 
-ENV OUTPUT_DIR=/output
+ENV HUGO_OUTPUT=/hugoSource/public
+ENV HUGO_SOURCE=/hugoSource
+ENV HUGO_CONFIG=/hugoSource/config.toml
+ENV HUGO_CMD=/bin/hugo
+ENV OUTPUT_DIR=/hugoSource/content/project
 
 EXPOSE 9001
 
