Fix bugs in readmesync, add syncall.
Fix bugs (don't remember which, oops) in readmesync.

Add a syncall utility that will generate the signed request that will
prompt readmesync to sync the specified repos.

--- a/readmesync/Dockerfile
+++ b/readmesync/Dockerfile
@@ -2,14 +2,13 @@ FROM busybox
 
 ADD readmesync /bin/readmesync
 ADD hugo /bin/hugo
+ADD ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
 VOLUME /hugoSource
 
-ENV HUGO_OUTPUT=/hugoSource/public
 ENV HUGO_SOURCE=/hugoSource
-ENV HUGO_CONFIG=/hugoSource/config.toml
 ENV HUGO_CMD=/bin/hugo
-ENV OUTPUT_DIR=/hugoSource/content/project
+ENV OUTPUT_DIR=/content/project
 
 EXPOSE 9001
 
